SERVER-65085 SBE plan cache entries can be incorrectly reused after a refineCollectionShardKey operation